force-app/main/default/objects/Staff_c__c/Staff_c__c.object-meta.xml
<CustomObject>
    <label>Staff_c</label>
    <nameField>
        <label>Staff_c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>staffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>