force-app/main/default/objects/Staff_c__c/fields/Department_c__c.field-meta.xml
<CustomField>
    <fullName>Department_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department__c</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Staff Members</relationshipLabel>
    <relationshipName>staffs</relationshipName>
    <type>Lookup</type>
</CustomField>