force-app/main/default/objects/Staff_c__c/fields/Staff_Id__c.field-meta.xml
<CustomField>
    <fullName>Staff_Id__c</fullName>
    <label>Staff Id</label>
    <type>AutoNumber</type>
</CustomField>