force-app/main/default/objects/Staff_c__c/validationRules/joining_date_cannot_be_in_the_future.validationRule-meta.xml
<ValidationRule>
    <fullName>joining_date_cannot_be_in_the_future</fullName>
    <active>true</active>
    <description>Employee joining date cannot be in the future.</description>
    <errorConditionFormula>Joining_Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>Joining date cannot be in future.</errorMessage>
</ValidationRule>