force-app/main/default/objects/Staff_c__c/validationRules/Salary_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_cannot_be_negative</fullName>
    <active>true</active>
    <description>Salary cannot be negative.</description>
    <errorConditionFormula>Salary__c  &lt; 0</errorConditionFormula>
    <errorMessage>Salary cannot be negative.</errorMessage>
</ValidationRule>